--- a/index.html
+++ b/index.html
@@ -378,26 +378,73 @@
 
 
 
-<!-- cards  -->      
+<!-- BEGIN CARDS  -->      
     <div class="page-wrapper">
       <div class="page-body">
         <div class="container-xl">
           <div class="row row-deck row-cards">
 
-            <!-- card with photo -->
-            <div class="card">
-              <!-- Photo -->
-              <div
-                class="img-responsive img-responsive-21x9 card-img-top"
-                style="background-image: url(/docs/assets/images/75166322068__F1FED4CA-CD5F-4866-972D-170E67395B0E.JPEG)"
-              ></div>
-              <div class="card-body">
-                <h3 class="card-title"><a href="/tiffnanie/tiffnanie" class="pe-auto">Do you see her?</a></h3>
-                <p class="text-secondary">
-                  She is everything. Go admire Her.
-                </p>
+            <!-- Cards with tabs component -->
+            <div class="card-tabs">
+              <!-- Cards navigation -->
+              <ul class="nav nav-tabs">
+                <li class="nav-item">
+                  <a href="#tab-top-1" class="nav-link active" data-bs-toggle="tab">Tab 1</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#tab-top-2" class="nav-link" data-bs-toggle="tab">Tab 2</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#tab-top-3" class="nav-link" data-bs-toggle="tab">Tab 3</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#tab-top-4" class="nav-link" data-bs-toggle="tab">Tab 4</a>
+                </li>
+              </ul>
+            <div class="tab-content">
+              <!-- Content of card #1 -->
+              <div id="tab-top-1" class="card tab-pane active show">
+                <div class="card-body">
+                  <div class="card-title">Content of tab #1</div>
+                  <p class="text-secondary">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, alias aliquid
+                    distinctio dolorem expedita, fugiat hic magni molestiae molestias odit.
+                  </p>
+                </div>
+              </div>
+              <!-- Content of card #2 -->
+              <div id="tab-top-2" class="card tab-pane">
+                <div class="card-body">
+                  <div class="card-title">Content of tab #2</div>
+                  <p class="text-secondary">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, alias aliquid
+                    distinctio dolorem expedita, fugiat hic magni molestiae molestias odit.
+                  </p>
+                </div>
+              </div>
+              <!-- Content of card #3 -->
+              <div id="tab-top-3" class="card tab-pane">
+                <div class="card-body">
+                  <div class="card-title">Content of tab #3</div>
+                  <p class="text-secondary">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, alias aliquid
+                    distinctio dolorem expedita, fugiat hic magni molestiae molestias odit.
+                  </p>
+                </div>
+              </div>
+              <!-- Content of card #4 -->
+              <div id="tab-top-4" class="card tab-pane">
+                <div class="card-body">
+                  <div class="card-title">Content of tab #4</div>
+                    <p class="text-secondary">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, alias aliquid
+                      distinctio dolorem expedita, fugiat hic magni molestiae molestias odit.
+                    </p>
+                  </div>
+                </div>
               </div>
             </div>
+            <!-- END CARD WITH TAB COMPONENTS -->
 
 <!--    -->       
           <div class="col-4">
@@ -429,10 +476,10 @@
     </div>
   </div>
 </div>
-<!--  end cards -->
+<!--  END CARDS -->
 
 
-<!--  breadcrumb -->    
+<!--  BEGIN BREADCRUMB -->    
     <div class="page-wrapper">
       <div class="page-body">
         <div class="container-xl">
@@ -469,7 +516,7 @@
 <div class="hr-text text-primary"></div>    
 </div></div></div>
           
-<!--  end breadcrumb -->
+<!--  END READCRUMB -->
     
   </body>
 </html>
