--- a/index.html
+++ b/index.html
@@ -7,22 +7,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>You Are Home
-          <svg  xmlns="http://www.w3.org/2000/svg"  
-            width="24"  
-            height="24"  
-            viewBox="0 0 24 24"  
-            fill="none"  
-            stroke="currentColor"  
-            stroke-width="2"  
-            stroke-linecap="round"  
-            stroke-linejoin="round"  
-            class="icon icon-tabler icons-tabler-outline icon-tabler-heart"
-          >
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-            <path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572" />
-          </svg>
-  </title>
+  <title>You Are Home ‪♡ </title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/core@1.1.1/dist/css/tabler.min.css" />
 </head>
   
@@ -199,10 +184,10 @@
         <!-- BEGIN USER MENU -->
         <div class="nav-item dropdown">
           <a href="#" class="nav-link d-flex lh-1 p-0 px-2" data-bs-toggle="dropdown" aria-label="Open user menu">
-            <span class="avatar avatar-sm" style="background-image: url(docs/assets/images/Photo on 2-7-17 at 8.14 PM.jpg)"></span>
+            <span class="avatar avatar-sm" style="background-image: url(/docs/assets/images/Photo on 2-7-17 at 8.14 PM.jpg)"></span>
             <div class="d-none d-xl-block ps-2">
-              <div>NOOOOOOAHHHHH</div>
-              <div class="mt-1 small text-secondary">hiiiii</div>
+              <div>noah</div>
+              <div class="mt-1 small text-secondary">hii</div>
             </div>
           </a>
           <div class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
