--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <!-- BEGIN USER MENU -->
         <div class="nav-item dropdown">
           <a href="#" class="nav-link d-flex lh-1 p-0 px-2" data-bs-toggle="dropdown" aria-label="Open user menu">
-            <span class="avatar avatar-sm" style="background-image: url(/docs/assets/images/Photo on 2-7-17 at 8.14 PM.jpg)"></span>
+            <span class="avatar avatar-sm" style="background-image: url(/docs/assets/images/no_underthesea.jpg)"></span>
             <div class="d-none d-xl-block ps-2">
               <div>noah</div>
               <div class="mt-1 small text-secondary">hii</div>
