--- a/PE-study.html
+++ b/PE-study.html
@@ -347,7 +347,8 @@
                 <h3 class="card-title">Past Results</h3>
               </div>
               <div class="card-body">
-                <p class="text-secondary">FE Civil Results Verifiable Link: <a href="https://account.ncees.org/rn/2101493-1372808-f157f54" class="pe-auto">Pass / 31 Mar 2021 / Oregon Board</a></p>
+                <p class="text-primary">FE Civil Results Verifiable Link: <a href="https://account.ncees.org/rn/2101493-1372808-f157f54" class="pe-auto">Pass / 31 Mar 2021 / Oregon Board</a></p>
+                <p class="text-secondary">PE Civil: Structural Results Verifiable Link: <a href="https://account.ncees.org/rn/2101493-1579567-609ce10" class="pe-auto">Unsuccessful Attempt / 13 Apr 2023 / Oregon Board</a></p> 
               </div>
             </div>
   
